--- a/index.html
+++ b/index.html
@@ -7,17 +7,32 @@
     <link rel="stylesheet" href="style.css" />
     <title>Linux Package Installer</title>
   </head>
-  <body>
+  <body bgcolor="grey
+  
+  ">
     <div class="head">
-      <a href="https://github.com/Adityaadpandey/Linux-Package-Installer/archive/refs/tags/0.0.3-alpha.tar.gz">
-        <img src="Tar.png" alt="" class="imgg"/>
-    </a>
-    <a href="https://github.com/Adityaadpandey/Linux-Package-Installer">
-      <h1 class="up">Linux Package Installer</h1>
-    </a>
-      <a href="https://github.com/Adityaadpandey/Linux-Package-Installer/archive/refs/tags/0.0.3-alpha.zip">
-        <img src="zip.png" alt="" class="imgg1"/>
-    </a>
+      <a
+        href="https://github.com/Adityaadpandey/Linux-Package-Installer/archive/refs/tags/0.0.3-alpha.tar.gz"
+      >
+        <img src="Tar.png" alt="" class="imgg" />
+      </a>
+      <a href="https://github.com/Adityaadpandey/Linux-Package-Installer">
+        <img src="maint.png" alt="" class="up" />
+      </a>
+      <a
+        href="https://github.com/Adityaadpandey/Linux-Package-Installer/archive/refs/tags/0.0.3-alpha.zip"
+      >
+        <img src="zip.png" alt="" class="imgg1" />
+      </a>
+    </div>
+
+    <div class="mid">
+        <article>
+      <h2 class="cent">Linux Package Installer</h2>
+      <p>
+        Linux Package Installer is a simple tool to install packages on your
+        Linux system.
+      </p></article>
     </div>
   </body>
 </html>
