--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
     </div>
 
     <div class="mid">
-        <article>
-      <h2 class="cent">Linux Package Installer</h2>
+      <h2 class="cent"> <b><i>Linux Package Installer</i></b></h2>
       <p>
-        Linux Package Installer is a simple tool to install packages on your
+        <b><i>Linux Package Installer</i></b> is a simple tool to install packages on your
         Linux system.
-      </p></article>
+      </p>
+     <p>This works like<b> HomeBrew</b>, But the Problem was Brew took a lot of time to download just the Brew</p>
+     <p>Not only that It also take a lot of time even to download other Package</p>
+      <p>So I made a simple tool to install packages on your system</p>
+      <p>
+      
+        </p>
     </div>
   </body>
 </html>
