change for file

--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Linux Package Installer</title>
-  </head>
-  <body bgcolor="grey
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="shortcut icon" href="My project.png" type="image/x-icon">
+  <title>Linux Package Installer</title>
+</head>
+
+<body bgcolor="grey
   
   ">
-    <div class="head">
-      <a
-        href="https://github.com/Adityaadpandey/Linux-Package-Installer/archive/refs/tags/0.0.3-alpha.tar.gz"
-      >
-        <img src="Tar.png" alt="" class="imgg" />
-      </a>
-      <a href="https://github.com/Adityaadpandey/Linux-Package-Installer">
-        <img src="maint.png" alt="" class="up" />
-      </a>
-      <a
-        href="https://github.com/Adityaadpandey/Linux-Package-Installer/archive/refs/tags/0.0.3-alpha.zip"
-      >
-        <img src="zip.png" alt="" class="imgg1" />
-      </a>
-    </div>
+  <div class="head">
+    <a href="https://github.com/Adityaadpandey/Linux-Package-Installer/archive/refs/tags/0.0.3-alpha.tar.gz">
+      <img src="Tar.png" alt="" class="imgg" />
+    </a>
+    <a href="https://github.com/Adityaadpandey/Linux-Package-Installer">
+      <img src="maint.png" alt="" class="up" />
+    </a>
+    <a href="https://github.com/Adityaadpandey/Linux-Package-Installer/archive/refs/tags/0.0.3-alpha.zip">
+      <img src="zip.png" alt="" class="imgg1" />
+    </a>
+  </div>
 
-    <div class="mid">
-      <h2 class="cent"> <b><i>Linux Package Installer</i></b></h2>
-      <p>
-        <b><i>Linux Package Installer</i></b> is a simple tool to install packages on your
-        Linux system.
-      </p>
-     <p>This works like<b> HomeBrew</b>, But the Problem was Brew took a lot of time to download just the Brew</p>
-     <p>Not only that It also take a lot of time even to download other Package</p>
-      <p>So I made a simple tool to install packages on your system</p>
-      <p>
-      
-        </p>
-    </div>
-  </body>
+  <div class="mid">
+    <h2 class="cent"> <b><i>Linux Package Installer</i></b></h2>
+    <p>
+      <b><i>Linux Package Installer</i></b> is a simple tool to install packages on your
+      Linux system.
+    </p>
+    <p>This works like<b> HomeBrew</b>, But the Problem was Brew took a lot of time to download just the Brew</p>
+    <p>Not only that It also take a lot of time even to download other Package</p>
+    <p>So I made a simple tool to install packages on your system</p>
+    <p>
+
+    </p>
+  </div>
+</body>
+
 </html>
