--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
   </div>
 
   <div class="mid">
-    <h2 class="cent"> <b><i>Linux Package Installer</i></b></h2>
-    <p>
+    <h1 class="cent"> <i>Linux Package Installer</i></h1>
+    <h4>
       <b><i>Linux Package Installer</i></b> is a simple tool to install packages on your
       Linux system.
-    </p>
-    <p>This works like<b> HomeBrew</b>, But the Problem was Brew took a lot of time to download just the Brew</p>
-    <p>Not only that It also take a lot of time even to download other Package</p>
-    <p>So I made a simple tool to install packages on your system</p>
-    <p>
-
-    </p>
+    </h4>
+    <p>This works like<b> HomeBrew</b>, But the Problem was Brew took a lot of time to download just the Brew
+      Not only that It also take a lot of time even to download other Package
+      So I made a simple tool to install packages on your system</p>
+    <div class="code_part">
+        <p class="oooo">   sudo apt-get install package_name</p>
+    </div>
   </div>
 </body>
 
