--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
     <p>This works like<b> HomeBrew</b>, But the Problem was Brew took a lot of time to download just the Brew
       Not only that It also take a lot of time even to download other Package
       So I made a simple tool to install packages on your system</p>
+      <h5>To Install this is using Curl </h5>
     <div class="code_part">
-        <p class="oooo">   sudo apt-get install package_name</p>
+        <p class="oooo">  sh -c "$(curl -fsSl https://raw.githubusercontent.com/Adityaadpandey/Linux-Package-Installer/master/install.sh)"</p>
+    </div>
+    <h5>To Run this direclty from the terminal (For Linux Mint, Ubuntu & All Fedora based distros) </h5>
+    <div class="code_part1">
+        <p class="ooo"> python3 -c "$(curl -fsSl https://raw.githubusercontent.com/Adityaadpandey/Linux-Package-Installer/master/LinuxMint/run.py)"</p>
     </div>
   </div>
 </body>
