--- a/index.html
+++ b/index.html
@@ -1,48 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="My project.png" type="image/x-icon" />
+    <title>Linux Package Installer</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="shortcut icon" href="My project.png" type="image/x-icon">
-  <title>Linux Package Installer</title>
-</head>
-
-<body bgcolor="grey
+  <body
+    bgcolor="grey
   
-  ">
-  <div class="head">
-    <a href="https://github.com/Adityaadpandey/Linux-Package-Installer/archive/refs/tags/0.0.3-alpha.tar.gz">
-      <img src="Tar.png" alt="" class="imgg" />
-    </a>
-    <a href="https://github.com/Adityaadpandey/Linux-Package-Installer">
-      <img src="maint.png" alt="" class="up" />
-    </a>
-    <a href="https://github.com/Adityaadpandey/Linux-Package-Installer/archive/refs/tags/0.0.3-alpha.zip">
-      <img src="zip.png" alt="" class="imgg1" />
-    </a>
-  </div>
-
-  <div class="mid">
-    <h1 class="cent"> <i>Linux Package Installer</i></h1>
-    <h4>
-      <b><i>Linux Package Installer</i></b> is a simple tool to install packages on your
-      Linux system.
-    </h4>
-    <p>This works like<b> HomeBrew</b>, But the Problem was Brew took a lot of time to download just the Brew
-      Not only that It also take a lot of time even to download other Package
-      So I made a simple tool to install packages on your system</p>
-      <h5>To Install this is using Curl </h5>
-    <div class="code_part">
-        <p class="oooo">  sh -c "$(curl -fsSl https://raw.githubusercontent.com/Adityaadpandey/Linux-Package-Installer/master/install.sh)"</p>
+  "
+  >
+    <div class="head">
+      <a
+        href="https://github.com/Adityaadpandey/Linux-Package-Installer/archive/refs/tags/0.0.3-alpha.tar.gz"
+      >
+        <img src="Tar.png" alt="" class="imgg" />
+      </a>
+      <a href="https://github.com/Adityaadpandey/Linux-Package-Installer">
+        <img src="maint.png" alt="" class="up" />
+      </a>
+      <a
+        href="https://github.com/Adityaadpandey/Linux-Package-Installer/archive/refs/tags/0.0.3-alpha.zip"
+      >
+        <img src="zip.png" alt="" class="imgg1" />
+      </a>
     </div>
-    <h5>To Run this direclty from the terminal (For Linux Mint, Ubuntu & All Fedora based distros) </h5>
-    <div class="code_part1">
-        <p class="ooo"> python3 -c "$(curl -fsSl https://raw.githubusercontent.com/Adityaadpandey/Linux-Package-Installer/master/LinuxMint/run.py)"</p>
-    </div>
-  </div>
-</body>
 
+    <div class="mid">
+      <h1 class="cent"><i>Linux Package Installer</i></h1>
+      <h4>
+        <b><i>Linux Package Installer</i></b> is a simple tool to install
+        packages on your Linux system.
+      </h4>
+      <p>
+        This works like<b> HomeBrew</b>, But the Problem was Brew took a lot of
+        time to download just the Brew Not only that It also take a lot of time
+        even to download other Package So I made a simple tool to install
+        packages on your system
+      </p>
+      <h5>To Install this is using Curl</h5>
+      <div class="code_part">
+        <p class="oooo" id="copy">
+          sh -c "$(curl -fsSl
+          https://raw.githubusercontent.com/Adityaadpandey/Linux-Package-Installer/master/install.sh)"
+          <button type="button" onclick="copyEvent('copy')">Copy</button>
+        </p>
+      </div>
+      <h5>
+        To Run this direclty from the terminal (For Linux Mint, Ubuntu & All
+        Fedora based distros)
+      </h5>
+      <div class="code_part1">
+        <p class="ooo" id="lol">
+          python3 -c "$(curl -fsSl
+          https://raw.githubusercontent.com/Adityaadpandey/Linux-Package-Installer/master/LinuxMint/run.py)"
+          <button type="button" onclick="copyEvent('lol')">Copy</button>
+        </p>
+      </div>
+    </div>
+    <script>
+      function copyEvent(id) {
+        var str = document.getElementById(id);
+        window.getSelection().selectAllChildren(str);
+        document.execCommand("Copy");
+      }
+    </script>
+  </body>
 </html>
