--- a/index.html
+++ b/index.html
@@ -77,5 +77,7 @@
         document.execCommand("Copy");
       }
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8176743841323604"
+     crossorigin="anonymous"></script>
   </body>
 </html>
