--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="My project.png" type="image/x-icon" />
     <title>Linux Package Installer</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8176743841323604"
+     crossorigin="anonymous"></script>
   </head>
 
   <body
