--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
       </h5>
       <div class="code_part1">
         <p class="ooo" id="lol">
-          python3 -c "$(curl -fsSl
-          https://raw.githubusercontent.com/Adityaadpandey/Linux-Package-Installer/master/LinuxMint/run.py)"
+          python3 -c "$(curl -fsSl https://raw.githubusercontent.com/Adityaadpandey/Linux-Package-Installer/master/Apt/Simple.py)"
           <!-- <button class="btn" type="button" onclick="copyEvent('lol')">Copy</button> -->
           <img class="imggg1" src="cpy.png" alt="" onclick="copyEvent('lol')" />
         </p>
